# Demos

./: AI_INSTRUCTIONS.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.github/: copilot-instructions.md
digital_assets/: CLAUDE.md  README.md  app.py  pyproject.toml  requirements.txt
digital_assets/src/digital_assets/: __init__.py
financial_quant/: CLAUDE.md  README.md  app.py  pyproject.toml  requirements.txt
financial_quant/simulated_data_lab/: .gitignore  CLAUDE.md  README.md  pyproject.toml
financial_quant/simulated_data_lab/ai/claude/prompts/: README.md  var_demo_data_generator.plan.md
financial_quant/simulated_data_lab/ai/copilot/prompts/: README.md
financial_quant/simulated_data_lab/ai/skills/: README.md
financial_quant/simulated_data_lab/configs/: equities_large.yaml  equities_small.yaml
financial_quant/simulated_data_lab/data/var_demo/: README.md  historical_returns.parquet  market_params.parquet  portfolio.parquet  sector_correlation.parquet
financial_quant/simulated_data_lab/notebooks/: var_demo_runner.ipynb
financial_quant/simulated_data_lab/src/simulated_data_lab/: __init__.py  cli.py  generate_var_demo_data.py  generator.py
financial_quant/src/financial_quant/: __init__.py
financial_quant/var_simulations/: CLAUDE.md  README.md  pyproject.toml
financial_quant/var_simulations/ai/claude/prompts/: PLAN_PANDAS_VAR.md  PLAN_POLARS_VAR.md  README.md
financial_quant/var_simulations/ai/copilot/prompts/: README.md
financial_quant/var_simulations/ai/skills/: README.md
financial_quant/var_simulations/docs/: var_flows.md
financial_quant/var_simulations/output/: pnl_scenarios.arrow  var_breakdown.csv  var_summary.csv
financial_quant/var_simulations/src/var_simulations/: __init__.py  benchmark.py  cli_pandas.py  cli_polars.py
financial_quant/var_simulations/src/var_simulations/pandas_var/: __init__.py  engine.py  loader.py  report.py
financial_quant/var_simulations/src/var_simulations/polars_var/: __init__.py  engine.py  loader.py  report.py
financial_quant/var_simulations/tests/: test_pandas_var.py  test_polars_var.py
shared/: CLAUDE.md
(+1 files in other folders)
