[project]
name = "digital-assets-demo"
version = "0.1.0"
description = "Streamlit app for digital assets and crypto calculations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "streamlit>=1.35.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "plotly>=5.22.0",
  "requests>=2.31.0",
]

[tool.uv]
package = false
