[project]
name = "financial-quant-calculator"
version = "0.1.0"
description = "Streamlit app with quantitative finance calculators"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "streamlit>=1.35.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "scipy>=1.13.0",
  "matplotlib>=3.8.0",
  "plotly>=5.22.0",
]

[tool.uv]
package = false
